--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<h1> Hello World!!!</h1>
+<h1>ThatProgrammingProdigy</h1>
+<b1> Hello! My name in Prodigy. I am a student who is just learning how to program.</b1> 
+<b2> I mostly program in Java, but I also know some Python and HTML ( Who even considers HTML as a programming language lol)</b2> 
+
