--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
 <body>
   <b1> Hello! My name in Prodigy. I am a student who is just learning how to program.<br></b1> 
-  <b2> I mostly program in Java, but I also know some Python and HTML ( Who even considers HTML as a programming language lol)</b2> 
+  <b2> I mostly program in Java, but I also know some Python and HTML ( Who even considers HTML as a programming language lol)<br></b2> 
 </body> 
 
 <button onclick = "google.com"> Google </button>
