--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <h1>ThatProgrammingProdigy</h1>
+  <title>ThatProgrammingProdigy</title>
 </head> 
   
 <body>
@@ -7,4 +7,8 @@
   <b2> I mostly program in Java, but I also know some Python and HTML ( Who even considers HTML as a programming language lol)<br></b2> 
 </body> 
 
-<button onclick = "google.com"> Google </button>
+<body> 
+  <form action = "https://www.google.com" method = "get" target = "_blank">
+      <button type = "submit"> Google </button>
+  </form>
+</body>  
