--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <b2> I mostly program in Java, but I also know some Python and HTML ( Who even considers HTML as a programming language lol)<br></b2> 
 </body> 
 
-<body> 
+<body>
+  <b1> New addition <br> </b1> 
   <form action = "https://www.google.com" method = "get" target = "_blank">
       <button type = "submit"> Google </button>
   </form>
