--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <h1> That Programming Prodigy </h1> 
   <title>ThatProgrammingProdigy</title>
 </head> 
   
@@ -8,7 +9,6 @@
 </body> 
 
 <body>
-  <b1> New addition <br> </b1> 
   <form action = "https://www.google.com" method = "get" target = "_blank">
       <button type = "submit"> Google </button>
   </form>
