--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 </body>  
 
 <body>
-  <img src = "https://www.google.com/imgres?imgurl=https%3A%2F%2Fak9.picdn.net%2Fshutterstock%2Fvideos%2F33588889%2Fthumb%2F10.jpg&imgrefurl=https%3A%2F%2Fwww.shutterstock.com%2Fvideo%2Fclip-33588889-neon-flickering-green-latin-letter-b-haze&docid=kMADY0obk09L9M&tbnid=E-pmc9jyloM66M%3A&vet=10ahUKEwiAt_mx__jlAhVPUK0KHSdODi4QMwhHKAEwAQ..i&w=852&h=480&client=firefox-b-1-d&bih=948&biw=910&q=neon%20green%20B&ved=0ahUKEwiAt_mx__jlAhVPUK0KHSdODi4QMwhHKAEwAQ&iact=mrc&uact=8">
-  
+  <b1> Updated image <br> </b1>
+<img src = "https://ak9.picdn.net/shutterstock/videos/33588889/thumb/10.jpg">  
 </body>   
