--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 <body>
   <b1> Hello! My name in Prodigy. I am a student who is just learning how to program.<br></b1> 
-  <b2> I mostly program in Java, but I also know some Python and HTML ( Who even considers HTML as a programming language lol)<br></b2> 
+  <b2> I mostly program in Java, but I also know some Python and HTML ( Who even considers HTML as a programming language lol)<br> <br><br></b2> 
 </body> 
 
 <body>
@@ -15,6 +15,6 @@
 </body>  
 
 <body>
-  <b1> Updated image <br> </b1>
+  <b1> <br> </b1>
 <img src = "https://ak9.picdn.net/shutterstock/videos/33588889/thumb/10.jpg">  
 </body>   
