--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <h1> That Programming Prodigy </h1> 
-  <title>ThatProgrammingProdigy</title>
+  <title>ThatRealProdigy</title>
 </head> 
   
 <body>
@@ -9,10 +9,22 @@
 </body> 
 
 <body>
+  <b1> Go to Google ---> </b1>
   <form action = "https://www.google.com" method = "get" target = "_blank">
       <button type = "submit"> Google </button>
   </form>
 </body>  
+
+<body> 
+  <b1> Go to my twitch account </b1> 
+  <form action = "https://www.twitch.tv/ThatRealProdigy" method = "get" target = "_blank">
+    <button type = "submit"> Twitch </button> 
+  </form>  
+</body>
+
+
+
+
 
 <body>
   <b1> <br> </b1>
