--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </body> 
 
 <body>
-  <b1> Go to Google ---> </b1>
+  <b1> Go to Google </b1>
   <form action = "https://www.google.com" method = "get" target = "_blank">
       <button type = "submit"> Google </button>
   </form>
