--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </body> 
 
 <body>
-  <b1> Go to Google </b1>
+  <b1> Go to Google: </b1>
   <form action = "https://www.google.com" method = "get" target = "_blank">
       <button type = "submit"> Google </button>
   </form>
 </body>  
 
 <body> 
-  <b1> Go to my twitch account </b1> 
+  <b1> Go to my twitch account: </b1> 
   <form action = "https://www.twitch.tv/ThatRealProdigy" method = "get" target = "_blank">
     <button type = "submit"> Twitch </button> 
   </form>  
