--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
   </form>  
 </body>
 
-
-
-
+<body> 
+  <b1> <br> </b1>
+  <a href = "hacking.html">Click me </a>
+</body>
 
 <body>
   <b1> <br> </b1>
