--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 <body> 
   <b1> <br> </b1>
-  <a href = "hacking.html">Click me </a>
+  <a href = "hacking.html"> Look Mom! I'm a Hyperlink! </a>
+  <b2> <br> </b2>
 </body>
 
 <body>
