--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body> 
   <b1> <br> </b1>
-  <a href = "hacking.html"> Look Mom! I'm a Hyperlink! </a>
+  <h1> <a href = "hacking.html"> Look Mom! I'm a Hyperlink! </a> </h1>
   <b2> <br> </b2>
 </body>
 
