--- a/hacking.html
+++ b/hacking.html
@@ -7,4 +7,6 @@
   <b1> <br> I guess you have to learn somehow <br> <b1>
 <body>
 
-
+<body>
+<img src = "https://i.chzbgr.com/full/9097238272/h3EBA2E25/funny-memes-person-when-i-turn-the-ac-off-to-have-more-power-in-my-car-how-it-really-is-what-it-feel">
+  </body>
